# Stability-Validation-for-Detecting-Insider-Trading-in-Crypto-Markets

./: .gitignore  README.md  pyproject.toml  requirements.txt
queries/: buys.sql  linked_wallets.sql  wallet_profit.sql
src/: dune_queries.py  dune_query_id_sets.py  feature_extraction_v2.py  isolation_forest.py  stability_testing.py  wallet_grouping.py
src/aster_experiments/: cli.py  config.py  feature_sets.py  pipeline.py  stats.py
src/aster_experiments/defaults/: aster_v2.json
tests/: stability_unit_test.py
